Added freemarker/ext/beans/unsafeMethods.properties to resource-config.json

--- a/freemarker-core/src/main/resources/META-INF/native-image/org.freemarker/freemarker/resource-config.json
+++ b/freemarker-core/src/main/resources/META-INF/native-image/org.freemarker/freemarker/resource-config.json
@@ -9,6 +9,12 @@
         }
       },
       {
+        "pattern": "\\Qfreemarker/ext/beans/unsafeMethods.properties\\E",
+        "condition": {
+          "typeReachable": "freemarker.ext.beans.LegacyDefaultMemberAccessPolicy"
+        }
+      },
+      {
         "pattern": "\\Qfreemarker/version.properties\\E",
         "condition": {
           "typeReachable": "freemarker.template.utility.ClassUtil"
